# twilio-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  encode.c  rest.c  twilio.c
include/: encode.h  twilio.h
src/: encode.c  rest.c  twilio.c
util/: curltest.c  encodetest.c  sms.c
